--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <header class="oba">
    <ul> <p class="example">
-      A instituição foi fundada em 2020, como uma escola técnica "computacional", aqui na instituição Jump nós buscamos oferecer o melhor aprendizado aos nossos alunos, para que no futuro as habilidades aprendidas possasm ser utilizadas de uma forma prática. </li>
+      A instituição Jump foi fundada em 2020, como uma escola técnica "computacional", aqui na instituição Jump nós buscamos oferecer o melhor aprendizado aos  nossos alunos, faze para que no futuro as habilidades aprendidas1 possasm ser utilizadas de uma forma prática. Nossos professores são os melhores no país inteiro, nós fizemos essa escolha para que o aprendizado chegue a niveis ainda maiores do que em qualquer outra escola, nosso maior objetivo atualmente e nos tornarmos a maior escola computacional do Brasil. No final de todos os anos nossos estudantes ganham um estágio em empresas de TI, para que eles possam adquirir experiência na área, as empresas que nos oferecem as bolsas de estágio se tornam parceiros da instituição. No futuro queremos que o Brasil seja um país tecnológico, essa é nossa motivação. </li>
   </ul>
 </p>
    </header>
@@ -33,7 +33,35 @@
    <body>
    <header class="eba">
    <ul>
-     Nathan G. Bruno H. Elizeu A. Tarcisio
+     Nathan, Bruno, Elizeu, Tarcisio.
    </body>
    </ul>
+   <body>
+    <header class="cabecalho2">
+  <div class="cabecalho2"><img src="default-avatar-icon-of-social-media-user-vector.jpg" alt="foto"></div>
+  <ul class="cabecalho-lista">
+  </ul>
+  </header>
+  </body>
+  <body>
+    <header class="cabecalho2">
+  <div class="cabecalho2"><img src="default-avatar-icon-of-social-media-user-vector.jpg" alt="foto"></div>
+  <ul class="cabecalho-lista">
+  </ul>
+  </header>
+  </body>
+  <body>
+    <header class="cabecalho2">
+  <div class="cabecalho2"><img src="default-avatar-icon-of-social-media-user-vector.jpg" alt="foto"></div>
+  <ul class="cabecalho-lista">
+  </ul>
+  </header>
+  </body>      A instituição foi fundada em 2020, como uma escola técnica "computacional", aqui na instituição Jump nós buscamos oferecer o melhor aprendizado aos  nossos alunos, para que no futuro as habilidades aprendidas possasm ser utilizadas de uma forma prática. </li>
+  <body>
+    <header class="cabecalho2">
+  <div class="cabecalho2"><img src="default-avatar-icon-of-social-media-user-vector.jpg" alt="foto"></div>
+  <ul class="cabecalho-lista">
+  </ul>
+  </header>
+  </body>
    
